# ShapeBridge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IR_SPEC.md  PHASES.md  SETUP.md
src/kernel/: __init__.py  export.py  occt_io.py  summary.py
src/shapebridge/: __init__.py  cli.py  logging_setup.py
src/shapebridge_mcp/: __init__.py  server.py  tools.py
src/stepgraph_ir/: __init__.py  schema.py  serialize.py  units.py
tests/: __init__.py  conftest.py  test_ir_schema.py  test_ir_serialization.py  test_mcp_tools.py  test_occt_io.py
tests/data/samples/: README.md
